--- a/test2.css
+++ b/test2.css
@@ -1,4 +1,4 @@
-<style type = text/css>
+<!--<style type = text/css>-->
 body {background-color: blue;}
 p {color: yellow;}
-</style>
+<!--</style>-->
